# json-schema-derive

./: Cargo.toml  README.md
json-schema-derive-macro/: Cargo.toml
json-schema-derive-macro/src/: lib.rs  serde_compat.rs
src/: lib.rs
