[package]
name = "json-schema-derive"
version = "0.0.2"
edition = "2021"
description = "JSON Schema derive macro with arbitrary fields support"
repository = "https://github.com/Pingid/json-schema-derive"
license = "MIT"
keywords = ["json-schema", "derive", "macro", "validation"]
categories = ["encoding", "development-tools", "no-std"]

[features]
serde-compat = ["serde", "json-schema-derive-macro/serde-compat"]

[workspace]
members = [".", "json-schema-derive-macro"]

[workspace.dependencies]
json-schema-derive-macro = { path = "json-schema-derive-macro", version = "0.0.2" }


[dependencies]
serde_json = "1.0"
json-schema-derive-macro = { workspace = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
jsonschema = "0.29"

[lib]
doctest = false

[[test]]
name = "tests"
path = "src/lib.rs"
required-features = ["serde-compat"]
